universal9810: Extend wifi scanning interval to 100s
* Default is 25s, extend it to 100 seconds for a slight improvement in battery life

--- a/overlay/frameworks/opt/net/wifi/service/res/values/config.xml
+++ b/overlay/frameworks/opt/net/wifi/service/res/values/config.xml
@@ -35,4 +35,7 @@
     <!-- Enable WPA2 to WPA3 auto-upgrade -->
     <bool translatable="false" name="config_wifiSaeUpgradeEnabled">false</bool>
      
+    <!-- Integer indicating wpa_supplicant scan interval in milliseconds -->
+    <integer translatable="false" name="config_wifi_supplicant_scan_interval">100000</integer>
+     
 </resources>
